2012-03-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Fixes to hybrid POOL merger to ensure correct JO fragments are invoked
    * Tagging as PATJobTransforms-00-04-03

2012-03-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Move option for hybrid POOL merger (fastPoolMerge) inside the MergePoolJobTransform itself
    * Ensure that merged file is validated after events have been added
    * Tagging as PATJobTransforms-00-04-02 

2012-03-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Improve robustness of hybrid merging:
        * Do not use shell execution
        * Ensure that stderr and stdout share a file handle
        * Behave correctly on negative return codes

2012-03-16  Junji Tojo <Junji.Tojo@cern.ch>
        * Added NTUP_HSG5WHU, NTUP_HSG5WHQ, NTUP_HSG5ZHLLU, NTUP_HSG5ZHMETU in Reco_trf.py and MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-01

2012-03-13  Junji Tojo <Junji.Tojo@cern.ch>
        * Fix typos, add/remove NTUPs in MergeNTUP_trf.py, consistent with Reco_trf.py
        * Tagging as PATJobTransforms-00-04-00

2012-03-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Make fastPoolMerge the default for POOL files in Merging_trf
    * Tagging as PATJobTransforms-00-03-99

2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
        * adding more NTUP arguments to MergeNTUP_trf 
        * Tagging as PATJobTransforms-00-03-98

2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
        * adding various NTUP arguments to MergeNTUP_trf 
        * Tagging as PATJobTransforms-00-03-97

2012-03-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Fix typos : missing "File" after output_NTUP_XXX in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-96

2012-03-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYBOOSTFile and outputNTUP_SUSY34LEPFile and in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-95

2012-03-02  Junji Tojo <Junji.Tojo@cern.ch>